# Hackson

./: .gitignore  README.md  pyproject.toml
artifacts/figures_quantum_smoke/: README.md
artifacts/question_dashboards/: README.md
artifacts/question_dashboards_quantum_continuous_smoke/: README.md
artifacts/question_dashboards_quantum_smoke/: README.md
artifacts/question_figures/: README.md
artifacts/question_figures_quantum_continuous_smoke/: README.md
artifacts/question_figures_quantum_smoke/: README.md
artifacts/raw_results/: ablation_metadata.json  adaptation_trace_profiles.csv  continuous_sudden_extension_405_406_full_metadata.json  continuous_sudden_extension_405_406_full_summary.csv  core_allocations.csv  core_edge_weights.csv  (+77 more)
configs/: ablation.yaml  demo.yaml  mvp.yaml
demo/: app.py
scripts/: build_demo_cache.py  generate_sequences.py  make_figures.py  make_question_dashboards.py  make_question_figures.py  run_ablations.py  run_core.py  run_quantum_benchmarks.py  run_quantum_question_study.py  run_quantum_rollout.py  run_question_study.py  watch_quantum_question_study_continuous_full.sh
tests/: test_exact.py  test_hamiltonian_energy.py  test_indexing.py  test_make_figures_quantum_benchmark_loader.py  test_make_figures_quantum_loader.py  test_metrics.py  test_objective.py  test_onehot_preservation.py  test_optimizer_snapshot.py  test_quantum_question_study.py  test_quantum_strategy_suite.py  test_question_study.py  test_runner_exports.py  test_sampling.py  test_sequence_reproducibility.py  test_switching_term.py  test_xy_convention.py
(+21 files in other folders)
